fix: update sidebar scrollbar (#64)

--- a/packages/compass-connect/src/components/connect.less
+++ b/packages/compass-connect/src/components/connect.less
@@ -81,9 +81,7 @@ label {
   }
 
   ::-webkit-scrollbar-track {
-    background-color: rgba(0,0,0,.10);
-    -webkit-border-radius: 0px;
-    border-radius: 0px;
+    background-color: none;
 
     &:hover {
       background-color: rgba(0,0,0,.16);
@@ -91,10 +89,9 @@ label {
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: rgba(255,255,255,1);
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    border: 1px solid rgba(0,0,0,.16);
+    background-color: rgba(255,255,255,.25);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
   }
 
   .form-container {
